--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.9",
     "validator": "^13.6.0",
