toggle follow BTN: done

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "socialme",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
